fix/front/nati-signup backup

--- a/app/profile/signup/signup.module.css
+++ b/app/profile/signup/signup.module.css
@@ -202,8 +202,7 @@
 }
 
 
-
-/* labels */
+/* laabels */
 
 .name, .lastname, .email, .username, .password, .dateOfBirth, .cv, .country, .progLanguages, .degree, .softSkills, .languages, .seniority, .specialization, .working{
     width: 250px;
